testCases/keywords/test5.uni
main(){
	helloThereBus = 1011100000b; //valid  
	from = 100111b; //error

}
neigh
